<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_xestion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a18franciscorm.proxecto.ActivityXestion"
    android:background="@color/fondo_xestion"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/ent_Nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pistaNome"/>
    <EditText
        android:id="@+id/ent_Tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pistaTipo"
        />
    <EditText
        android:id="@+id/ent_Azucre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pistaAz"/>
    <EditText
        android:id="@+id/ent_Graxa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pistaG"/>
    <EditText
        android:id="@+id/ent_Sodio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/pistaS"/>

    <Button
        android:id="@+id/engadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carga"/>
    <Button
        android:id="@+id/purgar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purga"/>

</LinearLayout>
