<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_imb"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a18franciscorm.proxecto.IMBActivity"
    android:background="@color/fondoSec"
    android:orientation="vertical"
    android:gravity="center"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explicaciónIMB"/>
    <EditText
        android:id="@+id/entradaAlturaIMB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintAltura"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/entradaPesoIMB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintPeso"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/entradaIdade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintIdade"
        android:inputType="numberDecimal"/>
    <Spinner
        android:id="@+id/sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ></Spinner>
    <Button
        android:id="@+id/calcularIMB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"/>
    <TextView
        android:id="@+id/resultadoIMB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>
