<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a18franciscorm.proxecto.MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/fondo_principal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/benvida"
        android:textSize="@dimen/letra_grande"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/letra_grande"/>
    <Button
        android:id="@+id/boton_Xestión"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_p_xestión"
        android:textSize="@dimen/letra_media"
        android:padding="@dimen/activity_horizontal_margin"/>
    <Button
        android:id="@+id/boton_Consulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_p_consulta"
        android:textSize="@dimen/letra_media"
        android:padding="@dimen/activity_horizontal_margin"
        />
    <Button
        android:id="@+id/boton_IMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IMC"
        android:textSize="@dimen/letra_media"
        android:padding="@dimen/activity_horizontal_margin"/>
    <Button
        android:id="@+id/boton_IMB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IMB"
        android:textSize="@dimen/letra_media"
        android:padding="@dimen/activity_horizontal_margin"
        />
</LinearLayout>
